Add main container div to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Secret Love</title>
 </head>
 <body>
+    <div class="main-container">
     <header>
         <nav class="navbar">
             <h1>Secret Love</h1>
@@ -75,6 +76,7 @@
             <button class="retry" onclick="reset()">Créer mon propre quiz </button>
         </div>
     </section>
+    </div>
 <script src="scripts/script.js"></script>    
 </body>
 </html>
